--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <h1>StarWars API</h1>
     </header>
     <section>
-        <h1 id="name"></h1>
+        <h2 id="name"></h2>
+        <h2 id="climate"></h2>
+        <h2 id="terrain"></h2>
+
         <input type="submit" id="button" name="button" value="Find">
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
